--- a/node/1 Mark-up.html
+++ b/node/1 Mark-up.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 
-<html>
-
+<html lang="ja">
 <head>
-	
-	<title></title>
-
+  <meta charset="utf-8">
+  <title>工事中</title>
+  <link rel="stylesheet" href="">
 </head>
 
 <body>
@@ -79,7 +78,7 @@
 
 		<footer>
 
-		    このサイトは @taguchi によって運営されています。
+		    このサイトは @sfxtf によって運営されています。
 
 		</footer> 
 </body>
