--- a/node/5 p hr pre div blockquote.html
+++ b/node/5 p hr pre div blockquote.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
-	<title></title>
+  <meta charset="utf-8">
+  <title>工事中</title>
+  <link rel="stylesheet" href="">
 </head>
 <body>
 
