--- a/node/6 table.html
+++ b/node/6 table.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
-    <table>
+  <meta charset="utf-8">
+  <title>工事中</title>
+  <link rel="stylesheet" href="">
+</head>
+<body>
+        <table>
 
         <!--
         
@@ -40,8 +45,5 @@
                 </tr>
             </tbody>
         </table>
-</head>
-<body>
-
 </body>
 </html>
