--- a/node/7 survey.html
+++ b/node/7 survey.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
-	<meta charset="utf-8">
-	<title>survey</title>
+  <meta charset="utf-8">
+  <title>工事中</title>
+  <link rel="stylesheet" href="">
 </head>
 <body>
 
