--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <header>
     <nav>
-      <a href="">About</a>
+      <a href="https://twitter.com/sfxtf">About</a>
       <a href="https://github.com/sfxtf/sfxtf.github.io">GitHub</a>
     </nav>
   </header>
