--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
     <p><a href="node/5 p hr pre div blockquote.html">5 p hr pre div blockquote</a></p>
 
-    <p><a href="node/6 table">6 table</a></p>
+    <p><a href="node/6 table.html">6 table</a></p>
 
-    <p><a href="node/7 survey">7 survey</a></p>
+    <p><a href="node/7 survey.html">7 survey</a></p>
 
   </div>
 
