--- a/node/2 img.html
+++ b/node/2 img.html
@@ -10,7 +10,7 @@
 
 			<h1>美味しいご飯</h1>
 
-			<p><img src="img/images.jpg" width="150" height="150" alt="空"></p>
+			<p><img src="sfxtf.github.io/img/images.jpg" width="150" height="150" alt="空"></p>
 
 		</article>
 </body>
