--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>工事中</title>
-  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -16,7 +16,11 @@
   </header>
 
   <div>
+  	<br>
+
     <p>Hello World!</p>
+
+    <br>
 
     <p>作品</p>
 
