--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 
     <p><a href="node/7 survey.html">7 survey</a></p>
 
+    <p><a href="node/8 textarea button">8 textarea button</a></p>
+
   </div>
 
 
