--- a/node/7 survey.html
+++ b/node/7 survey.html
@@ -41,6 +41,11 @@
 				<!--<p>メールアドレス: <input type="text" name="email"　size="50" maxlength="5" value="abc"></p>-->
 				<p>メールアドレス: <input type="text" name="email" placeholder="please enter email"></p>
             	<p><input type="submit" value="送信！"></p>
+
+            <p>ログイン: <input type="password" name="password"></p>
+            <input type="hidden" name="user_id" value="23423">
+            <p><input type="submit" value="送信！"></p>
+
 			</form>
 		</article>
 </body>
